# recommender-tutorial

./: .gitignore  README.md
miniconda3/envs/tf/etc/conda/activate.d/: env_vars.sh
pytorch_basics/: main.py  pyproject.toml
tf_recommender/: tf_recommender.py
